# ele4205pr

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  client  cmake_install.cmake  common.h  server
client/: client_example  client_example.cpp
doc/html/: CameraCapture_8h_source.html  ImageClient_8h_source.html  ImageServer_8h_source.html  PWMSongParser_8h_source.html  SongParser_8h_source.html  TCPClient_8h_source.html  TCPServer_8h_source.html  annotated.html  classCameraCapture-members.html  classCameraCapture.html  classImageClient-members.html  classImageClient.html  classImageServer-members.html  classImageServer.html  classPWMSongParser-members.html  classPWMSongParser.html  classSongParser-members.html  classSongParser.html  classTCPClient-members.html  classTCPClient.html  classTCPServer-members.html  classTCPServer.html  classes.html  common_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  structresolution-members.html  structresolution.html  structtiming-members.html  structtiming.html  unionIMAGE__CLIENT__MSG-members.html  unionIMAGE__CLIENT__MSG.html  unionIMAGE__SERVER__MSG-members.html  unionIMAGE__SERVER__MSG.html
doc/html/search/: all_69.js  all_70.js  all_73.js  all_74.js  classes_69.js  classes_74.js  functions_67.js  functions_69.js  functions_74.js  functions_7e.js  search.js
doc/latex/: annotated.tex  classCameraCapture.eps  classCameraCapture.tex  classImageClient.eps  classImageClient.tex  classImageServer.eps  classImageServer.tex  classPWMSongParser.eps  classPWMSongParser.tex  classSongParser.eps  classSongParser.tex  classTCPClient.eps  classTCPClient.tex  classTCPServer.eps  classTCPServer.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  hierarchy.tex  refman.tex  structresolution.tex  structtiming.tex  unionIMAGE__CLIENT__MSG.tex  unionIMAGE__SERVER__MSG.tex
include/: CameraCapture.h  ImageClient.h  ImageServer.h  PWMSongParser.h  SongParser.h  TCPClient.h  TCPServer.h  common.h
server/: server_example  server_example.cpp
src/: CameraCapture.cpp  ImageClient.cpp  ImageServer.cpp  PWMSongParser.cpp  ServerSongPlayer.cpp  SongParser.cpp  TCPClient.cpp  TCPServer.cpp  boneCVtiming.cpp  client  client.cpp  livrable1.cpp  mainClient.cpp  mainImageServer.cpp  mainMusicServer.cpp  playMusicServer.cpp  playMusicServer.h  server  server.cpp
